Changed theme to dark mode an added display text for invalid stops

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,6 @@
 html {
     font-family: monospace;
     text-align: center;
-    background-color: Canvas;
-    color: CanvasText;
     color-scheme: light dark;
 }
 
